namespaces/dust-poc/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dust-poc-int
  annotations:
    kubernetes.io/ingress.class: wg69
    external-dns.alpha.kubernetes.io/ttl: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.69.1.1/27, 10.69.1.49/27, 10.69.1.82/32, 100.64.0.0/10

    cert-manager.io/cluster-issuer: wg69-issuer
spec:
  tls:
  - hosts:
    - dustbox.wg69.net
    secretName: tls-dustbox.wg69.net

  rules:

  - host: dustbox.wg69.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dust-poc
          servicePort: 80
